@@ -16,7 +16,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-data-schemaregistry-avro</artifactId>
-  <version>1.0.0-beta.5</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry-avro;current} -->
+  <version>1.0.0-beta.6</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry-avro;current} -->
 
   <name>Microsoft Azure Schema Registry - Avro-specific package for client library</name>
   <description>Avro-specific package for Azure Schema Registry client library</description>
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-data-schemaregistry</artifactId>
-      <version>1.0.0-beta.5</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry;current} -->
+      <version>1.0.0-beta.6</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry;current} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
@@ -141,6 +141,7 @@
             <configuration>
               <argLine>
                 --add-opens com.azure.data.schemaregistry.avro/com.azure.data.schemaregistry.avro=ALL-UNNAMED
+                --add-opens com.azure.data.schemaregistry.avro/com.azure.data.schemaregistry.avro.generatedtestsources=org.apache.avro,ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
